Fixed layout issue with taxa grids.

--- a/public/stylesheets/taxa.css
+++ b/public/stylesheets/taxa.css
@@ -34,7 +34,7 @@ table.taxa .taxon_name {
 
 .taxa.grid .taxonimage { display:block; width: 100px; height:100px;}
 .taxa.grid .taxonimage a { height: 100px; position:relative;}
-.taxa.grid .taxonimage img { max-width: 100px; max-height: 100px; position:absolute; bottom: 0;}
+.taxa.grid .taxonimage img { max-width: 100px; max-height: 100px; position:absolute; bottom:0; left: 0;}
 
 .taxa.fluid .taxonimage img {max-width:none; height: 100px; position: static;}
 .taxa.fluid .taxonimage img.iconic {height: auto;}
